--- a/board/src/main/resources/templates/board/edit.html
+++ b/board/src/main/resources/templates/board/edit.html
@@ -1,7 +1,7 @@
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<html>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
     <title>글 수정</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -31,30 +31,30 @@
 </nav>
 
 <div class="container p-5 my-5 bg-dark text-white">
-    <h2><b>${board.title} 수정</b></h2>
-    <p>${board.nickname} 님</p>
+    <h2><b th:text="${board.title} + ' 수정'"></b></h2>
+    <p th:text="${board.nickname} + '님 '">오류오류</p>
 </div>
 
 <div class="container">
-    <form action="/board/${board.id}/edit?pageNum=${param.pageNum}&amount=${param.amount}" method="POST">
+    <form action="list.html" th:action="@{/board/{id}/edit(id=${board.id}, pageNum=${param.pageNum}, amount=${param.amount})}" method="POST" th:object="${board}">
         <div class="mb-3 mt-3">
             <label for="title" class="form-label">제목:</label>
-            <input type="text" class="form-control" id="title" name="title" value="${board.title}">
+            <input type="text" class="form-control" id="title" th:field="*{title}">
         </div>
         <div class="mb-3">
             <label for="content" class="form-label">본문:</label>
-            <textarea class="form-control" name="content" id="content" rows="10">${board.content}</textarea>
+            <textarea class="form-control" name="content" id="content" rows="10" th:text="*{content}">오류오류</textarea>
         </div>
         <div class="mb-3 mt-3">
             <label for="nickname" class="form-label">작성자 닉네임:</label>
-            <input type="text" class="form-control" id="nickname" name="nickname" value="${board.nickname}" readonly>
+            <input type="text" class="form-control" id="nickname" th:field="*{nickname}" readonly>
         </div>
         <hr>
         <button type="submit" class="btn btn-outline-primary">수정하기</button>
         <button type="button" class="btn btn-outline-danger"
-                onclick="location.href='/board/${board.id}/delete?pageNum=${param.pageNum}&amount=${param.amount}'">삭제하기</button>
+                th:onclick="|location.href='@{/board/{id}/delete(id=${board.id}, pageNum=${param.pageNum}, amouont=${param.amount})}'|">삭제하기</button>
         <button type="button" class="btn btn-outline-dark"
-                onclick="location.href='/board/${board.id}?pageNum=${param.pageNum}&amount=${param.amount}'">취소하기</button>
+                th:onclick="|location.href='@{/board/{id}(id=${board.id}, pageNum=${param.pageNum}, amount=${param.amount})}'|">취소하기</button>
     </form>
 
 </div>
