--- a/board/src/main/resources/templates/board/regist.html
+++ b/board/src/main/resources/templates/board/regist.html
@@ -1,7 +1,7 @@
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<html>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
     <title>글 등록</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -35,19 +35,19 @@
 </div>
 
 <div class="container">
-    <form action="/board/new" method="post">
+    <form action="/board/new" method="post" th:object="${board}">
         <div class="mb-3 mt-3">
             <label for="title" class="form-label">제목:</label>
-            <input type="text" class="form-control" id="title" placeholder="제목을 입력해주세요" name="title">
+            <input type="text" class="form-control" id="title" th:field="*{title}" placeholder="제목을 입력해주세요">
         </div>
         <div class="mb-3">
             <label for="content" class="form-label">본문:</label>
-            <textarea class="form-control" name="content" id="content" rows="10" placeholder="본문을 입력해주세요"></textarea>
+            <textarea class="form-control" id="content" th:field="*{content}" rows="10" placeholder="본문을 입력해주세요"></textarea>
         </div>
         <div class="mb-3 mt-3">
             <label for="nickname" class="form-label">작성자 닉네임:</label>
-            <%--나중에 로그인 기능을 만들어 회원 닉네임이 바로 들어갈 수 있도록하자--%>
-            <input type="text" class="form-control" id="nickname" placeholder="닉네임을 입력해주세요" name="nickname">
+            <!--나중에 로그인 기능을 만들어 회원 닉네임이 바로 들어갈 수 있도록하자-->
+            <input type="text" class="form-control" id="nickname" placeholder="닉네임을 입력해주세요" th:field="*{nickname}">
         </div>
         <button type="submit" class="btn btn-outline-primary"
                 onclick="location.href='/board/new'">등록하기</button>
