- 패키지 조정 ==> 기능별로 패키지를 수정 - 로그인 기능 추가 - 로그아웃 기능 추가 - 로그인 기능에 따라 home 페이지에서 로그인 되었다는거 보였음 <추가해야할 기능> - 스프링 인터셉터를 통해 로그인된 회원만 글을 볼 수 있고 수정할 수 있도록 한다. - 그리고 모든 회원이 글 수정이 가능하지만 해당 글의 수정 및 삭제는 닉네임이 일치하는 회원만 가능하도록 하자 - 회원가입할 때 아이디 중복여부, 닉네임 중복여부, 확인 비밀번호 기능 추가하기

--- a/board/src/main/resources/templates/welcome.html
+++ b/board/src/main/resources/templates/welcome.html
@@ -20,16 +20,25 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="/tw">Study</a>
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link text-light" href="#">로그인</a>
+            <li class="nav-item" th:if="${member==null}">
+                <a class="nav-link text-light" href="/member/login">로그인</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link text-light" href="#">회원가입</a>
+            <li class="nav-item" th:if="${member==null}">
+                <a class="nav-link text-light" href="/member">회원가입</a>
+            </li>
+            <li class="nav-item" th:if="${member!=null}">
+                <form th:action="@{/member/logout}" method="post">
+                    <button type="submit" class="btn btn-outline-danger">로그아웃</button>
+                </form>
+                <!--<a class="nav-link text-light" href="/member/logout">로그아웃</a>-->
             </li>
         </ul>
     </div>
 </nav>
 <div class="container p-5 my-5 bg-dark text-white">
+    <div th:if="${member!=null}">
+        <h1 th:text="${member.nickname} + '님 환영합니다!!'"></h1>
+    </div>
     <h2>안녕하세요~공부블로그 입니다</h2>
     <p>새로운 것을 공부할 때마다 기능이 추가됩니다!!!</p>
 </div>
