--- a/board/src/main/resources/templates/member/loginForm.html
+++ b/board/src/main/resources/templates/member/loginForm.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <link th:href="@{/css/bootstrap.min.css}"
           href="../css/bootstrap.min.css" rel="stylesheet">
-    <title>회원가입</title>
-
     <style>
         .container {
             max-width: 560px;
@@ -15,52 +13,39 @@
             color: #dc3545;
         }
     </style>
+    <title>로그인</title>
 </head>
 <body>
 <div class="container">
     <div class="py-5 text-center">
-        <h2><b>회원 가입</b></h2>
+        <h2><b>로그인</b></h2>
     </div>
-    <h4 class="mb-3">회원 정보 입력</h4>
-    <form action="/tw" th:action th:object="${member}" method="post">
+    <hr class="my-4">
+    <form action="/tw" th:action th:object="${loginForm}" method="post">
         <div th:if="${#fields.hasGlobalErrors()}">
-            <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
+            <p class="field-error" th:each="err : ${#fields.globalErrors()}"
+            th:text="${err}">전체 오류 메시지</p>
         </div>
-
         <div>
             <label for="id">로그인ID</label>
             <input type="text" id="id" th:field="*{id}" class="form-control" th:errorclass="field-error">
             <div class="field-error" th:errors="*{id}"></div>
         </div>
-
         <div>
             <label for="password">비밀번호</label>
             <input type="password" id="password" th:field="*{password}" class="form-control" th:errorclass="field-error">
             <div class="field-error" th:errors="*{password}"></div>
         </div>
-
-        <div>
-            <label for="name">이름</label>
-            <input type="text" id="name" th:field="*{name}" class="form-control" th:errorclass="field-error">
-            <div class="field-error" th:errors="*{name}"></div>
-        </div>
-
-        <div>
-            <label for="nickname">닉네임</label>
-            <input type="text" id="nickname" th:field="*{nickname}" class="form-control" th:errorclass="field-error">
-            <div class="field-error" th:errors="*{nickname}"></div>
-        </div>
-
         <hr class="my-4">
         <div class="row">
             <div class="col">
-                <button class="w-100 btn btn-outline-primary btn-lg" type="submit">
-                    회원가입</button>
+                <button class="w-100 btn btn-outline-primary btn-lg" type="submit">로그인</button>
             </div>
             <div class="col">
                 <button class="w-100 btn btn-outline-danger btn-lg"
-                th:onclick="|location.href='@{/tw}'|" type="button">취소하기
-                </button>
+                th:onclick="|location.href='@{/}'|"
+                type="button">
+                    취소</button>
             </div>
         </div>
     </form>
