- 인터셉터를 적용해서 웰컴페이지, 로그인, 회원가입 페이지 이외에는 접근할 수 없도록 막았다. <이후에 내가 해야할 것> - 에러메시지가 제대로 나오지 않는다. 이 점 수정할 것 - 현재 로그인한 유저와 동일한 닉네임이여야지 글 수정, 삭제가 될 수있도록 기능구현 - 아이디 중복여부, 닉네임 중복여부 체크 - 회원가입시 확인비밀번호 추가

--- a/board/src/main/resources/templates/welcome.html
+++ b/board/src/main/resources/templates/welcome.html
@@ -68,9 +68,12 @@
             </tr>
         </tbody>
     </table>
-    <div >
+    <div th:if="${member!=null}">
         <button type="button" class="btn btn-outline-dark"
                 onclick="location.href='/board'">더보기</button>
+    </div>
+    <div th:if="${member==null}">
+        <b style="color: #005cbf">더 많은 글을 보고싶다면 회원가입/로그인 하세요~</b>
     </div>
 </div>
 
