--- a/board/src/main/resources/templates/board/detail.html
+++ b/board/src/main/resources/templates/board/detail.html
@@ -22,12 +22,10 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="/tw">Study</a>
         <ul class="navbar-nav">
-            <!--로그인 및 회원가입 링크 수정해야함-->
             <li class="nav-item">
-                <a class="nav-link text-light" href="#">로그인</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-light" href="#">회원가입</a>
+                <form th:action="@{/member/logout}" method="post">
+                    <button type="submit" class="btn btn-outline-danger">로그아웃</button>
+                </form>
             </li>
         </ul>
     </div>
