--- a/board/src/main/resources/templates/board/regist.html
+++ b/board/src/main/resources/templates/board/regist.html
@@ -24,10 +24,9 @@
         <a class="navbar-brand" href="/tw">Study</a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link text-light" href="#">로그인</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-light" href="#">회원가입</a>
+                <form th:action="@{/member/logout}" method="post">
+                    <button type="submit" class="btn btn-outline-danger">로그아웃</button>
+                </form>
             </li>
         </ul>
     </div>
