--- a/board/src/main/resources/templates/member/loginForm.html
+++ b/board/src/main/resources/templates/member/loginForm.html
@@ -21,7 +21,7 @@
         <h2><b>로그인</b></h2>
     </div>
     <hr class="my-4">
-    <form action="/tw" th:action th:object="${loginForm}" method="post">
+    <form action="/member/login" th:action="@{/member/login}" th:object="${loginForm}" method="post">
         <div th:if="${#fields.hasGlobalErrors()}">
             <p class="field-error" th:each="err : ${#fields.globalErrors()}"
             th:text="${err}">전체 오류 메시지</p>
@@ -43,7 +43,7 @@
             </div>
             <div class="col">
                 <button class="w-100 btn btn-outline-danger btn-lg"
-                th:onclick="|location.href='@{/}'|"
+                th:onclick="|location.href='@{/tw}'|"
                 type="button">
                     취소</button>
             </div>
