--- a/board/src/main/resources/templates/board/list.html
+++ b/board/src/main/resources/templates/board/list.html
@@ -42,7 +42,7 @@
         <tbody>
             <tr th:each="board : ${list}">
                 <td th:text="${board.id}"></td>
-                <td><a th:href="@{/board/{id}(id=${board.id}, pageNum=${pageMaker.cri.pageNum}, amount=${pageMaker.cri.amount})}" th:text="${board.title}"></a></td>
+                <td><a th:href="@{/board/{id}(id=${board.id}, pageNum=${pageMaker.cri.pageNum}, amount=${pageMaker.cri.amount}, status=${true})}" th:text="${board.title}"></a></td>
                 <td th:text="${board.nickname}"></td>
                 <td th:text="${board.hit}"></td>
                 <td th:text="${board.regdate}"></td>
