--- a/board/src/main/resources/templates/member/regist.html
+++ b/board/src/main/resources/templates/member/regist.html
@@ -40,6 +40,12 @@
         </div>
 
         <div>
+            <label for="confirmPassword">확인비밀번호</label>
+            <input type="password" id="confirmPassword" th:field="*{confirmPassword}" class="form-control" th:errorclass="field-error">
+            <div class="field-error" th:errors="*{confirmPassword}"></div>
+        </div>
+
+        <div>
             <label for="name">이름</label>
             <input type="text" id="name" th:field="*{name}" class="form-control" th:errorclass="field-error">
             <div class="field-error" th:errors="*{name}"></div>
