--- a/board/src/main/resources/templates/board/list.html
+++ b/board/src/main/resources/templates/board/list.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid">
@@ -19,6 +20,13 @@
         </ul>
     </div>
 </nav>
+
+<p th:if="${param.status}">
+    <script>
+    function check(){
+        alert("글 등록이 되었습니다.!!");
+    }
+</script></p>
 
 <div class="container p-5 my-5 bg-dark text-white">
     <h2>아무거나 게시판</h2>
