--- a/board/src/main/resources/templates/member/regist.html
+++ b/board/src/main/resources/templates/member/regist.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
+          href="/resources/static/css/bootstrap.min.css" rel="stylesheet">
     <title>회원가입</title>
-
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <style>
         .container {
             max-width: 560px;
@@ -13,6 +13,10 @@
         .field-error {
             border-color: #dc3545;
             color: #dc3545;
+        }
+        .field-ok{
+            border-color: #1c7430;
+            color: #1c7430;
         }
     </style>
 </head>
@@ -22,15 +26,17 @@
         <h2><b>회원 가입</b></h2>
     </div>
     <h4 class="mb-3">회원 정보 입력</h4>
-    <form action="/tw" th:action th:object="${member}" method="post">
+    <form action="/tw" th:action th:object="${memberRegister}" method="post" id="registerForm">
         <div th:if="${#fields.hasGlobalErrors()}">
             <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
         </div>
 
         <div>
             <label for="id">로그인ID</label>
+            <button type="button" id="checkIdBtn" class="btn btn-outline-info">아이디 중복체크</button>
             <input type="text" id="id" th:field="*{id}" class="form-control" th:errorclass="field-error">
             <div class="field-error" th:errors="*{id}"></div>
+            <p id="checkIdOK"></p>
         </div>
 
         <div>
@@ -60,7 +66,7 @@
         <hr class="my-4">
         <div class="row">
             <div class="col">
-                <button class="w-100 btn btn-outline-primary btn-lg" type="submit">
+                <button class="w-100 btn btn-outline-primary btn-lg" type="submit" id="registerBtn">
                     회원가입</button>
             </div>
             <div class="col">
@@ -71,5 +77,46 @@
         </div>
     </form>
 </div>
+
+<script type="text/javascript">
+    $('#checkIdBtn').click(function (){
+        let id = $('#id').val();
+        console.log("아이디 출력" + id);
+        if(id !== ''){
+            $.ajax({
+                type:'POST',
+                url:'/checking',
+                data: JSON.stringify({
+                    id : $('#id').val()
+                }),
+                contentType:'application/json',
+                success: function (result) {
+                    if(result == 1){
+                        $('#checkIdOK').text('사용가능한 아이디입니다.').attr('class', 'field-ok');
+                    } else{
+                        $('#checkIdOK').text('중복된 아이디입니다.').attr('class','field-error');
+                    }
+                },
+                error: function (error) {
+                    console.log("error: " + error);
+                }
+            });
+        } else {
+            alert('아이디를 입력하세요!!');
+            $('#id').focus();
+        }
+    });
+    /*$('#registerBtn').click(function (){
+        let idCheck = [[${memberRegister.checkId}]]
+        console.log(idCheck)
+        if (idCheck == false) {
+            alert("아이디 중복체크를 해주세요.");
+            $('#checkIdBtn').focus();
+            return false;
+        }else{
+            $('#registerForm').submit();
+        }
+    });*/
+</script>
 </body>
 </html>
