비밀번호, 닉네임 변경기능 구현완료  ==> Form을 만들어야하고, validation처리도 해야한다.
나름의 리팩토링을 해보려고 하였지만 한번 짜여진 코드의 리팩토링은 어렵다는 것을 알게되었다. 확실히 설계부분에서 DTO클래스와 Entity 클래스를 확실히 나누고 확실히 정해야한다는 것을 깨달았다.

--- a/board/src/main/resources/templates/member/regist.html
+++ b/board/src/main/resources/templates/member/regist.html
@@ -33,8 +33,10 @@
 
         <div>
             <label for="id">로그인ID</label>
-            <button type="button" id="checkIdBtn" class="btn btn-outline-info">아이디 중복체크</button>
-            <input type="text" id="id" th:field="*{id}" class="form-control" th:errorclass="field-error">
+            <div>
+                <input type="text" id="id" th:field="*{id}" class="form-control" th:errorclass="field-error">
+                <button type="button" id="checkIdBtn" class="btn btn-outline-info">아이디 중복체크</button>
+            </div>
             <div class="field-error" th:errors="*{id}"></div>
             <p id="checkIdOK"></p>
         </div>
