--- a/board/src/main/resources/templates/member/changePwForm.html
+++ b/board/src/main/resources/templates/member/changePwForm.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>비밀번호 변경</title>
+    <link th:href="@{/css/bootstrap.min.css}"
+          href="/resources/static/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .container {
+            max-width: 560px;
+        }
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+        }
+    </style>
 </head>
 <body>
-
+<div class="container">
+    <div class="py-5 text-center">
+        <h2><b>비밀번호 변경</b></h2>
+    </div>
+    <hr class="my-4">
+    <form th:action="@{/member/{userId}/password(userId=${member.id})}" th:object="${memberChangePw}" method="post">
+        <div>
+            <label for="password">새 비밀번호</label>
+            <input type="password" id="password" th:field="*{password}" class="form-control" th:errorclass="field-error">
+            <div class="field-error" th:errors="*{password}"></div>
+        </div>
+        <div>
+            <label for="confirmPassword">비밀번호 확인</label>
+            <input type="password" id="confirmPassword" th:field="*{confirmPassword}" class="form-control" th:errorclass="field-error">
+            <div class="field-error" th:errors="*{confirmPassword}"></div>
+        </div>
+        <hr class="my-4">
+        <div class="row">
+            <div class="col">
+                <button class="w-100 btn btn-outline-primary btn-lg" type="submit">변경하기</button>
+            </div>
+            <div class="col">
+                <button class="w-100 btn btn-outline-danger btn-lg" th:onclick="|location.href=@{/tw}|">취소하기</button>
+            </div>
+        </div>
+    </form>
+</div>
 </body>
 </html>
