--- a/board/src/main/resources/templates/member/changePwForm.html
+++ b/board/src/main/resources/templates/member/changePwForm.html
@@ -21,7 +21,10 @@
         <h2><b>비밀번호 변경</b></h2>
     </div>
     <hr class="my-4">
-    <form th:action="@{/member/{userId}/password(userId=${member.id})}" th:object="${memberChangePw}" method="post">
+    <form th:action="@{/member/{userId}/password(userId=${userId})}" th:object="${memberChangePw}" method="post">
+        <div th:if="${#fields.hasGlobalErrors()}">
+            <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
+        </div>
         <div>
             <label for="password">새 비밀번호</label>
             <input type="password" id="password" th:field="*{password}" class="form-control" th:errorclass="field-error">
@@ -38,7 +41,8 @@
                 <button class="w-100 btn btn-outline-primary btn-lg" type="submit">변경하기</button>
             </div>
             <div class="col">
-                <button class="w-100 btn btn-outline-danger btn-lg" th:onclick="|location.href=@{/tw}|">취소하기</button>
+                <button type="button" class="w-100 btn btn-outline-danger btn-lg"
+                        th:onclick="|location.href='@{/tw}'|">취소하기</button>
             </div>
         </div>
     </form>
