--- a/board/src/main/resources/templates/board/list.html
+++ b/board/src/main/resources/templates/board/list.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>게시판</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link th:href="@{/css/bootstrap.min.css}"
+          href="/resources/static/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,7 +35,27 @@
 
 <div class="container mt-3">
     <h2><b>게시판</b></h2>
-    <p style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">기본적인 게시판</p>
+    <div class="col">
+        <div class="row">
+            <p style="font-family: Impact, 'Arial Narrow Bold', sans-serif;">기본적인 게시판</p>
+        </div>
+        <div class="row">
+            <form method="get">
+                <div class="mx-auto input-group mt-3">
+                    <label>
+                        <select name="query" class="form-control">
+                            <option value="title">제목</option>
+                            <option value="nickname">닉네임</option>
+                        </select>
+                    </label>
+                    <input name="content" type="text" class="form-control" placeholder="검색어 입력" aria-label="search" aria-describedby="button-addon2">
+                    <button class="btn btn-success" type="submit" id="button-addon2">검색</button>
+                </div>
+            </form>
+        </div>
+
+    </div>
+    <hr class="my-4">
     <table class="table">
         <thead>
         <tr>
@@ -50,7 +70,8 @@
         <tbody>
             <tr th:each="board : ${list}">
                 <td th:text="${board.id}"></td>
-                <td><a th:href="@{/board/{id}(id=${board.id}, pageNum=${pageMaker.cri.pageNum}, amount=${pageMaker.cri.amount}, status=${true})}" th:text="${board.title}"></a></td>
+                <td th:if="${param.query == null && param.content == null}"><a th:href="@{/board/{id}(id=${board.id}, pageNum=${pageMaker.cri.pageNum}, amount=${pageMaker.cri.amount}, status=${true})}" th:text="${board.title}"></a></td>
+                <td th:if="${param.query != null && param.content != null}"><a th:href="@{/board/{id}(id=${board.id}, pageNum=${pageMaker.cri.pageNum}, amount=${pageMaker.cri.amount}, query=${param.query}, content=${param.content})}" th:text="${board.title}"></a></td>
                 <td th:text="${board.nickname}"></td>
                 <td th:text="${board.hit}"></td>
                 <td th:text="${board.regdate}"></td>
@@ -67,22 +88,41 @@
         <div class="pull-right">
             <ul class="pagination" th:with="start=${pageMaker.startPage}, end=${pageMaker.endPage}">
 
-                <li class="page-item" th:if="${pageMaker.prev}">
+                <li class="page-item" th:if="${pageMaker.prev && param.query==null && param.content==null}">
                     <a class="page-link" th:href="@{/board(pageNum=${pageMaker.cri.pageNum - 1}, amount=${pageMaker.cri.amount})}" th:text="'이전'">이전</a>
                 </li>
 
+                <li class="page-item" th:if="${pageMaker.prev && param.query!=null && param.content!=null}">
+                    <a class="page-link" th:href="@{/board(pageNum=${pageMaker.cri.pageNum - 1}, amount=${pageMaker.cri.amount}, query=${param.query}, content=${param.content})}" th:text="'이전'">이전</a>
+                </li>
+
                 <span th:each="num : ${#numbers.sequence(start, end)}">
-                    <li class="page-item active" th:if="${num == pageMaker.cri.pageNum}">
-                        <a class="page-link" th:href="@{/board(pageNum=${num}, amount=${pageMaker.cri.amount})}" th:text="${num}"></a>
+                    <li class="page-item active" th:if="${num == pageMaker.cri.pageNum && num!=0}">
+                        <a class="page-link"
+                           th:if="${param.query==null && param.content==null}"
+                           th:href="@{/board(pageNum=${num}, amount=${pageMaker.cri.amount})}" th:text="${num}"></a>
+                        <a class="page-link"
+                        th:if="${param.query!=null && param.content!=null}"
+                        th:href="@{/board(pageNum=${num}, amount=${pageMaker.cri.amount}, query=${param.query}, content=${param.content})}" th:text="${num}"></a>
                     </li>
-                    <li class="page-item" th:if="${num != pageMaker.cri.pageNum}">
-                        <a class="page-link" th:href="@{/board(pageNum=${num}, amount=${pageMaker.cri.amount})}" th:text="${num}"></a>
+                    <li class="page-item" th:if="${num != pageMaker.cri.pageNum && num!=0}">
+                        <!--<a class="page-link" th:href="@{/board(pageNum=${num}, amount=${pageMaker.cri.amount})}" th:text="${num}"></a>-->
+                        <a class="page-link"
+                           th:if="${param.query==null && param.content==null}"
+                           th:href="@{/board(pageNum=${num}, amount=${pageMaker.cri.amount})}" th:text="${num}"></a>
+                        <a class="page-link"
+                           th:if="${param.query!=null && param.content!=null}"
+                           th:href="@{/board(pageNum=${num}, amount=${pageMaker.cri.amount}, query=${param.query}, content=${param.content})}" th:text="${num}"></a>
                     </li>
                 </span>
 
 
-                <li class="page-item" th:if="${pageMaker.next}">
+                <li class="page-item" th:if="${pageMaker.next && param.query==null && param.content==null}">
                     <a class="page-link" th:href="@{/board(pageNum=${pageMaker.cri.pageNum + 1}, amount=${pageMaker.cri.amount})}" th:text="'다음'">다음</a>
+                </li>
+
+                <li class="page-item" th:if="${pageMaker.next && param.query!=null && param.content!=null}">
+                    <a class="page-link" th:href="@{/board(pageNum=${pageMaker.cri.pageNum + 1}, amount=${pageMaker.cri.amount}, query=${param.query}, content=${param.content})}" th:text="'다음'">다음</a>
                 </li>
 
             </ul>
