--- a/board/src/main/resources/templates/welcome.html
+++ b/board/src/main/resources/templates/welcome.html
@@ -69,7 +69,7 @@
         <tr th:each="board : ${list}">
                 <td th:text="${board.id}">ID</td>
                 <td th:text="${board.title}">TITLE</td>
-                <td th:text="${board.nickname}">NICKNAME</td>
+                <td th:text="${board.member.nickname}">NICKNAME</td>
                 <td th:text="${board.hit}">HIT</td>
                 <td th:text="${board.regdate}">REGDATE</td>
                 <td><span th:text="${board.updatedate}?: _">수정X</span></td>
