--- a/myBoard/src/main/resources/templates/board/listForm.html
+++ b/myBoard/src/main/resources/templates/board/listForm.html
@@ -17,6 +17,16 @@
     </style>
 </head>
 <body>
+<div th:if="${removeStatus}">
+    <script>
+        alert("게시물이 삭제되었습니다.")
+    </script>
+</div>
+<div th:if="${registerStatus}">
+    <script>
+        alert("게시물이 등록되었습니다.")
+    </script>
+</div>
 <div class="container">
     <div class="header">
         <ul class="nav nav-pills pull-right">
@@ -25,8 +35,9 @@
         <a href="/"><h3 class="text-muted">아무거나 게시판</h3></a>
     </div>
     <div>
-        <button type="button" class="btn btn-outline-info"
+        <button type="button" class="btn btn-outline-primary my-2"
         onclick="location.href='/board/new'">글쓰기</button>
+
         <table class="table table-striped">
             <thead>
             <tr>
