--- a/myBoard/src/main/resources/templates/board/registerForm.html
+++ b/myBoard/src/main/resources/templates/board/registerForm.html
@@ -10,7 +10,7 @@
       border-color: #dc3545;
       color: #dc3545;
     }
-  </style>
+    </style>
     <title>글 등록</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
       </div>
       <div class="form-group">
           <label th:for="content">본문</label>
-          <textarea class="form-control" th:field="*{content}" placeholder="본문을 입력해주세요" rows="4" cols="80"></textarea>
+          <textarea class="form-control" th:field="*{content}" placeholder="본문을 입력해주세요" rows="4" cols="80" th:errorclass="fieldError"></textarea>
           <p th:if="${#fields.hasErrors('content')}" th:errors="*{content}" th:errorclass="fieldError"></p>
       </div>
       <div class="form-group">
