마이페이지를 만들고 있는데 작성글의 개수가 한개인 사람은 글이 뜨지 않는다. 이 점을 고치고 boardDetail로 링크까지 시키고 해당 게시글을 페이징하자. 그리고 프로필 이미지를 추가할 수 있는 기능도 만들자.

--- a/myBoard/src/main/resources/templates/home.html
+++ b/myBoard/src/main/resources/templates/home.html
@@ -25,6 +25,7 @@
             <h3 class="text-black-50">환영합니다!!</h3>
             <form method="post" action="/logout">
                 <button type="submit" class="btn btn-lg btn-outline-danger">로그아웃</button>
+                <button type="button" class="btn btn-lg btn-outline-primary" th:onclick="|location.href='@{/users/{id}(id=${loginMember.id})}'|">마이페이지</button>
             </form>
             <hr class="my-3">
             <p><a class="btn btn-lg btn-outline-success" href="/board">게시판</a></p>
